# meowtail

./: README.md
src/meowtail/: Cargo.toml  meowtail.toml  portmap.toml
src/meowtail-frontend/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
src/meowtail-frontend/src/: index.html
src/meowtail-frontend/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts  auth.interceptor.ts  portmap.spec.ts  portmap.ts  udhcpd-manager.spec.ts  udhcpd-manager.ts  user-info.ts
src/meowtail-frontend/src/app/login-component/: login-component.css  login-component.html  login-component.ts
src/meowtail-frontend/src/app/portmap-component/: portmap-component.css  portmap-component.html  portmap-component.spec.ts  portmap-component.ts
src/meowtail-frontend/src/app/udhcpd-manager/: udhcpd-manager.css  udhcpd-manager.html  udhcpd-manager.spec.ts  udhcpd-manager.ts
src/meowtail-frontend/src/app/welcome-component/: welcome-component.ts
src/meowtail/.cargo/: config.toml
src/meowtail/src/: config.rs  main.rs  models.rs  portmap_manager.rs  udhcpd_manager.rs
src/meowtail/src/handlers/: auth.rs  mod.rs  portmap.rs  udhcpd.rs
src/meowtail/src/middleware/: jwt.rs  mod.rs
