[package]
name = "meowtail"
version = "0.1.0"
edition = "2024"

[dependencies]
daemonize = "0.5"
actix-web = "4"
nix = { version = "0.29.0", features = ["user","signal", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }